tests/invalid/assign_to_const_struct_field.lang
module main

typedef Struct struct {
    a: i32
};

const const_struct = Struct {12};

func main() {
    const_struct.a = 123;
}
